--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -11,8 +11,9 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     if: >
-      github.event.workflow_run.event == 'pull_request' &&
-      github.event.workflow_run.conclusion == 'success'
+      ${{ github.event.workflow_run.event == 'pull_request' &&
+          github.event.workflow_run.conclusion == 'success' &&
+          contains(github.event.workflow_run.jobs.*.name, 'coverage-combine') }}
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
