Pin coverage python package (#192)
* Pin coverage python package

* Fix for coverage-combine job missing Python and the correct coverage installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ test = [
     "mypy",
     "pytest",
     "pytest-asyncio",
+    "coverage",
     "tomli" # pip-compile did not pick up from mypy
 ]
 
