--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -56,7 +56,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_test.txt
-          pip install coverage
       - name: Run tests
         run: |
           coverage run --data-file=.coverage.${{ matrix.os }}.${{ matrix.python-version }} -m pytest tests
@@ -74,13 +73,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+          cache: 'pip'
       - name: Download coverage data
         uses: actions/download-artifact@v4
       - name: Merge coverage data
         id: merge
         run: |
           python -m pip install --upgrade pip
-          pip install coverage
+          pip install -r requirements_test.txt
           coverage combine coverage*
           coverage html
       - name: Upload final coverage html report
