Pin jsonlint tool (#196)

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: 'latest'
       - name: Install jsonlint
-        run: npm install -g @prantlf/jsonlint
+        run: npm install -g @prantlf/jsonlint@16.0.0
       - name: Validate JSON files
         run: |
           for file in $(find ./ethstaker_deposit/intl -name "*.json"); do
