--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -19,8 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_test.txt
+          pip install -r requirements.txt -r requirements_test.txt
       - name: Run type checker
         run: python -m mypy --config-file mypy.ini -p ethstaker_deposit
       - name: Run linter
@@ -55,8 +54,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_test.txt
+          pip install -r requirements.txt -r requirements_test.txt
       - name: Run tests
         run: |
           coverage run --data-file=.coverage.${{ matrix.os }}.${{ matrix.python-version }} -m pytest tests
@@ -85,8 +83,7 @@ jobs:
         id: merge
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_test.txt
+          pip install -r requirements.txt -r requirements_test.txt
           coverage combine coverage*
           coverage html
       - name: Upload final coverage html report
