Replace flake8 with ruff for linting (#259)
* Replace flake8 with ruff for linting
* Replace flake8 with ruff in Makefile
* Replace flake8 in tox
* Update pre-commit to use ruff instead of flake8. Update uv.lock and pyproject.toml
* Fix linting error and pre-commit stuff
* Update pre-commit documentation and dependencies

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run type checker
         run: python -m mypy --config-file mypy.ini -p ethstaker_deposit
       - name: Run linter
-        run: flake8 --config=flake8.ini ./ethstaker_deposit ./tests
+        run: ruff check ./ethstaker_deposit ./tests
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
