--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,13 @@ version = {attr = "ethstaker_deposit.__version__"}
 generate-hashes = true
 no-annotate = true
 
+[tool.ruff]
+preview = true
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "W", "F"]
+
 [project]
 name = "ethstaker_deposit"
 description = "Secure key generation for deposits"
@@ -41,7 +48,6 @@ dynamic = ["version"]
 [project.optional-dependencies]
 test = [
     "exceptiongroup==1.2.2",
-    "flake8==7.1.1",
     "jsonschema==4.23.0",
     "mypy==1.14.1",
     "pytest==8.3.4",
@@ -51,16 +57,19 @@ test = [
     "attrs==24.2.0",
     "iniconfig==2.0.0",
     "jsonschema-specifications==2023.12.1",
-    "mccabe==0.7.0",
     "mypy-extensions==1.0.0",
     "packaging==24.1",
     "pluggy==1.5.0",
-    "pycodestyle==2.12.1",
-    "pyflakes==3.2.0",
     "referencing==0.35.1",
     "rpds-py==0.20.0",
     "typing-extensions==4.12.2",
+    "ruff==0.9.0",
 ]
 
 [project.urls]
 "Homepage" = "https://github.com/eth-educators/ethstaker-deposit-cli"
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.1.0",
+]
