--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands=
 [common-lint]
 deps={[common-install]deps}
 commands=
-    flake8 --config={toxinidir}/flake8.ini {toxinidir}/tests
+    ruff check {toxinidir}/ethstaker_deposit {toxinidir}/tests
     mypy --config-file {toxinidir}/mypy.ini -p ethstaker_deposit
 
 [common-script]
