--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["."]
+include = ["ethstaker_deposit*"]
 
 [tool.setuptools.dynamic]
 version = {attr = "ethstaker_deposit.__version__"}
